--- a/styles.css
+++ b/styles.css
@@ -6,8 +6,6 @@
 :root {
   --primary: #ead3cb;
   --highlight: #845460;
-  --tertiary: #ead3cb;
-  --quarternary: #2b4f60;
 }
 
 html {
@@ -17,9 +15,9 @@ html {
 
 body {
   font-family: 'Poppins', sans-serif;
-  color: var(--quarternary);
   font-size: 15px;
-  margin: 0 10%;
+  margin-left: auto;
+  margin-right: auto;
 }
 
 header {
@@ -37,18 +35,17 @@ header h1 {
   width: 100%;
   justify-content: center;
   font-size: 20px;
-  color: var(--tertiary);
+  color: var(--primary);
   padding-top: 10px;
 }
 
 nav {
   display: flex;
   width: 100%;
-  align-self: center;
-  justify-content: space-between;
+  justify-content: space-around;
   padding: 0px 20px 15px 20px;
   border-bottom: 2px solid;
-  color: var(--tertiary);
+  color: var(--primary);
   text-decoration: solid;
 }
 
@@ -62,7 +59,7 @@ main {
 footer {
   padding: 30px 20px 10px 20px;
   background: var(--highlight);
-  color: var(--tertiary);
+  color: var(--primary);
   height: 70px;
   width: 100%;
   font-size: 10px;
@@ -96,28 +93,28 @@ img {
   width: 100%;
 }
 
-.kontakt {
+#kontakt {
   padding: 20px 20px;
   background: var(--highlight);
   height: 120px;
   width: 100%;
-  color: var(--tertiary);
+  color: var(--primary);
   text-align: center;
   display: flex;
   justify-content: center;
   flex-direction: column;
 }
 
-.kontakt h2 {
-  color: var(--tertiary);
+#kontakt h2 {
+  color: var(--primary);
   padding-top: 10px;
 }
 
-.kontakt a {
+#kontakt a {
   text-decoration: none;
 }
 
-.social {
+#social {
   display: flex;
   justify-content: center;
   padding: 10px 10px 10px 10px;
@@ -126,14 +123,14 @@ img {
   width: 300px;
 }
 
-.social h2 {
-  color: var(--tertiary);
+#social h2 {
+  color: var(--primary);
   text-align: center;
   padding: 0px;
   text-align: start;
 }
 
-.social a {
+#social a {
   margin: 0px;
   color: var(--highlight);
 }
@@ -166,12 +163,12 @@ dd {
   justify-content: center;
 }
 
-.cv h2 {
+#cv h2 {
   display: flex;
   justify-content: center;
 }
 
-.bio {
+#bio {
   display: grid;
   width: 300px;
   height: auto;
@@ -182,7 +179,7 @@ dd {
   font-size: 10px;
 }
 
-.interessen {
+#interessen {
   display: grid;
   width: 300px;
   height: 100%;
