--- a/styles.css
+++ b/styles.css
@@ -91,6 +91,7 @@ img {
   height: auto;
   margin: 5px 0;
   width: 100%;
+  max-height: 600px;
 }
 
 #kontakt {
@@ -173,6 +174,28 @@ dd {
   width: 300px;
   height: auto;
   text-align: justify;
+}
+
+@media (min-width: 600px) and (orientation: landscape) {
+  #bio {
+    display: grid;
+    width: 600px;
+    height: auto;
+    text-align: justify;
+  }
+  #social {
+    display: flex;
+    justify-content: center;
+    padding: 10px 10px 10px 10px;
+    background: var(--highlight);
+    height: 100%;
+    width: 600px;
+  }
+  img {
+    height: auto;
+    margin: 5px 0;
+    width: 600px;
+  }
 }
 
 .p {
