--- a/styles.css
+++ b/styles.css
@@ -117,7 +117,8 @@ img {
 
 #social {
   display: flex;
-  justify-content: center;
+  justify-content: space-around;
+  align-items: center;
   padding: 10px 10px 10px 10px;
   background: var(--highlight);
   height: 100%;
@@ -176,6 +177,17 @@ dd {
   text-align: justify;
 }
 
+.p {
+  font-size: 10px;
+}
+
+#interessen {
+  display: grid;
+  width: 300px;
+  height: 100%;
+  padding-bottom: 20px;
+}
+
 @media (min-width: 600px) and (orientation: landscape) {
   #bio {
     display: grid;
@@ -186,6 +198,8 @@ dd {
   #social {
     display: flex;
     justify-content: center;
+    align-items: center;
+    flex-direction: row;
     padding: 10px 10px 10px 10px;
     background: var(--highlight);
     height: 100%;
@@ -196,15 +210,10 @@ dd {
     margin: 5px 0;
     width: 600px;
   }
-}
-
-.p {
-  font-size: 10px;
-}
-
-#interessen {
-  display: grid;
-  width: 300px;
-  height: 100%;
-  padding-bottom: 20px;
+  div {
+    display: flex;
+    justify-content: stretch;
+    width: 600px;
+    flex-direction: row;
+  }
 }
