split CSS Styles to files

--- a/styles.css
+++ b/styles.css
@@ -1,200 +1,11 @@
 @import './_base.css';
-
-:root {
-  --primary: #ead3cb;
-  --highlight: #845460;
-}
-
-.page__header {
-  height: auto;
-  width: 100%;
-  display: flex;
-  gap: 5px;
-  padding-left: 0px;
-  display: grid;
-  background-color: var(--highlight);
-}
-
-.page__header h1 {
-  display: flex;
-  width: 100%;
-  justify-content: center;
-  font-size: 20px;
-  color: var(--primary);
-  padding-top: 10px;
-}
-
-.page__header-nav {
-  display: flex;
-  width: 100%;
-  justify-content: space-around;
-  padding: 0px 20px 15px 20px;
-  border-bottom: 2px solid;
-  color: var(--primary);
-  text-decoration: solid;
-}
-
-footer {
-  padding: 30px 20px 10px 20px;
-  background: var(--highlight);
-  color: var(--primary);
-  height: 70px;
-  width: 100%;
-  font-size: 10px;
-  text-align: center;
-}
-
-a {
-  color: var(--tertiary);
-}
-
-input,
-button,
-textarea {
-  font-size: inherit;
-}
-
-h2 {
-  font-weight: bolder;
-  font-size: 17pt;
-  padding-bottom: 10px;
-}
-
-ul {
-  list-style-type: square;
-  list-style-position: inside;
-}
-
-img {
-  height: auto;
-  margin: 5px 0;
-  width: 100%;
-  max-height: 600px;
-}
-
-.footer__kontakt {
-  padding: 20px 20px;
-  background: var(--highlight);
-  height: auto;
-  width: 100%;
-  color: var(--primary);
-  text-align: center;
-  display: flex;
-  justify-content: center;
-  flex-direction: column;
-}
-
-.footer__kontakt h2 {
-  color: var(--primary);
-  padding-top: 10px;
-}
-
-footer__kontakt a {
-  text-decoration: none;
-}
-
-.main__social {
-  display: flex;
-  justify-content: space-around;
-  align-items: center;
-  padding: 10px 10px 10px 10px;
-  background: var(--highlight);
-  height: 100%;
-  width: 300px;
-}
-
-.main__social h2 {
-  color: var(--primary);
-  text-align: center;
-  padding: 0px;
-  text-align: start;
-}
-
-.main__social {
-  margin: 0px;
-  color: var(--highlight);
-}
-
-.main__social--logo {
-  width: 30px;
-  height: auto;
-  text-decoration: none;
-}
-
-dt {
-  font-weight: bold;
-  width: 300px;
-  height: auto;
-  display: flex;
-  justify-content: center;
-}
-
-dd {
-  width: 300px;
-  height: auto;
-  display: flex;
-  justify-content: center;
-}
-
-.main__cv h2 {
-  display: flex;
-  justify-content: center;
-}
-
-.details__bio {
-  display: grid;
-  width: 300px;
-  height: auto;
-  text-align: justify;
-}
-
-.p {
-  font-size: 10px;
-}
-
-.details__interessen {
-  display: grid;
-  width: 300px;
-  height: 100%;
-  padding-bottom: 20px;
-}
-
-@media (min-width: 600px) and (orientation: landscape) {
-  .details__bio {
-    display: grid;
-    width: 600px;
-    height: auto;
-    text-align: justify;
-  }
-  .main__social {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    flex-direction: row;
-    padding: 10px 10px 10px 10px;
-    background: var(--highlight);
-    height: 100%;
-    width: 600px;
-  }
-  .portrait {
-    height: auto;
-    margin: 5px 0;
-    width: 600px;
-  }
-  .main__details {
-    display: flex;
-    justify-content: stretch;
-    width: 600px;
-    flex-direction: row;
-  }
-}
-
-@media (max-width: 600px) {
-  .main__social h2 {
-    color: var(--primary);
-    text-align: center;
-    padding: 0px;
-    text-align: start;
-    font-size: 17px;
-  }
-}
+@import './_variables.css';
+@import './_components.css';
+@import './_utility.css';
+@import './components/_header.css';
+@import './components/_mediaqueries.css';
+@import './components/_footer.css';
+@import './components/_images.css';
+@import './components/_social.css';
+@import './components/_details.css';
+@import './components/_cv.css';
